# url_shortener

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  url_shortener.db  urls.db
.github/workflows/: lint.yml  lint_and_tests_test.yml  lint_test.yml
url_shortener/: main.py  routes.py  trans_url.py  validator.py  views.py
url_shortener/app/: main.py  middlewares.py  views.py
url_shortener/app/tests/: fake_client.py  test_middlewares.py  test_views.py
url_shortener/app/tests/fixtures/error_pages/: 404.html  500.html  bad_url_resp.html
url_shortener/app/utils/: trans_url.py  validator.py
url_shortener/app/utils/tests/: test_trans_url.py  test_validator.py
url_shortener/db/: conn_to_db.py  init_db.py  schema.sql  scheme.py  urls_repo.py
url_shortener/db/tests/: data.sql  test_conn_to_db.py  test_urls_repo.py
url_shortener/templates/: bad_url.html  base.html  error_page.html  home.html
url_shortener/tests/: fake_client.py  test_middlewares.py  test_views.py
url_shortener/tests/fixtures/: error_page.html  home.html  home_bad_url.html  home_error.html
url_shortener/tests/fixtures/home_pages/: home_url_created.html
url_shortener/utils/: trans_url.py
url_shortener/utils/tests/: test_trans_url.py  test_validator.py
