[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp-jinja2>=1.6",
    "aiohttp>=3.12.11",
    "pydantic>=2.11.5",
]

[tool.uv]
dev-dependencies = [
    "logging>=0.4.9.6",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 80
fix = true
