[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp-jinja2>=1.6",
    "aiohttp>=3.12.11",
    "aiosqlite>=0.21.0",
    "pydantic>=2.11.5",
]

[tool.uv]
dev-dependencies = [
    "logging>=0.4.9.6",
    "pytest-aiohttp>=1.1.0",
    "pytest-cov>=6.2.0",
    "pytest-mock>=3.14.1",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 80
fix = true

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --setup-show --verbose"

[tool.coverage.run]
branch = true
omit = [
    "url_shortener/main.py",
    "url_shortener/settings.py",
    # "url_shortener/middlewares.py",
]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
omit = ["*/tests/*"]
